--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ compiler:
  - clang
  - gcc
  script:
-- gcc -o test test.c // we can use gcc instead of clang too
+- gcc -o test tt.c // we can use gcc instead of clang too
  - ./test
