--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-language: c
- sudo: false # only for faster builds
-compiler: 
-
- - clang
- - gcc
- script:
-- gcc -o test tt.c // we can use gcc instead of clang too
- - ./test
+matrix:
+  include:
+     - language: c
+       sudo: false # only for faster builds
+       compiler: 
+          - clang
+          - gcc
+       script:
+          - gcc -o test tt.c // we can use gcc instead of clang too
+          - ./test
