--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ matrix:
           - clang
           - gcc
        script:
-          - gcc -o test tt.c 
+          - gcc -o test test.c 
           - ./test
